# oop

./: .gitignore  readme.md
1/: parse_obj.py
1/inc/: config.h  error.h  line.h  mishalib.h  obj3d.h  obj3d_util.h  transformations.h
1/src/: linalg.cpp  line.cpp  mishalib.cpp  obj3d.cpp  obj3d_util.cpp  transformations.cpp
1_qt_creator/: CMakeLists.txt  config.h  linalg.cpp  linalg.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh3d.cpp  mesh3d.h  obj_reader.cpp  obj_reader.h  renderer.cpp  state.cpp  state.h  transformations.h
1_qt_creator/inc/: controller.h  domain.h  error.h  linalg.h  mainwindow.h  mesh3d.h  model.h  obj_io.h  observable.h  renderer.h  result.h  transformations.h  view.h
1_qt_creator/src/: controller.cpp  linalg.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mesh3d.cpp  model.cpp  obj_io.cpp  observable.cpp  renderer.cpp  transformations.cpp  view.cpp
1_struct/: mainwindow.ui
2/: CMakeLists.txt  main.cpp
2/inc/: basic_set.h  errors.h
2/inc/rbtree/: rbtree.hpp  rbtree_node.h
2/inc/tests/: creation.h  insertion.h  main.h
3/: .gitignore  CMakeLists.txt  main.cpp  parse_obj.py
3/command/: facade.h
3/command/inc/: base_command.h  camera_command.h  model_command.h  object_command.h  scene_command.h
3/command/src/: camera_command.cpp  model_command.cpp  object_command.cpp  scene_command.cpp
3/docs/: diagam.mdj
3/drawer/inc/: base_canvas.h  canvas_factory.h  canvas_solution.h  qt_canvas.h  qt_canvas_factory.h  test_canvas.h
3/drawer/src/: canvas_solution.cpp  qt_canvas.cpp  qt_canvas_factory.cpp  test_canvas.cpp
3/exception/: base_exception.h  loader_exceptions.h  logic_exceptions.h
3/factory/inc/: component_abstract_factory.h  component_factory.h  mesh_component_factory.h
3/load/inc/: abstract.h  loader.h  mesh_model_builder.h  mesh_model_loader.h  mesh_model_source.h  mesh_model_source_factory.h  mesh_objfile_source.h
3/load/src/: loader.cpp  mesh_model_builder.cpp  mesh_model_loader.cpp  mesh_model_source_factory.cpp  mesh_objfile_source.cpp
3/manager/inc/: base_manager.h  camera_manager.h  draw_manager.h  load_manager.h  manager_solution.h  scene_manager.h  test_draw_manager.h  transform_manager.h
3/manager/src/: camera_manager.cpp  draw_manager.cpp  load_manager.cpp  manager_solution.cpp  scene_manager.cpp  test_draw_manager.cpp  transform_manager.cpp
3/math/inc/: glm_wrapper.h  linalg.h  linalg.hpp  transformation.h
3/math/src/: glm_wrapper.cpp  linalg.cpp  transformation.cpp
3/object/inc/: camera.h  drawable_model.h  light_source.h  mesh_model.h  model_ref.h  scene_object.h
3/object/src/: camera.cpp  mesh_model.cpp
3/qt_ui/: interactor.cpp  interactor.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene_meta.cpp  scene_meta.h  vim.cpp  vim.h
3/scene/inc/: canvas.h  draw_manager.h  qt_canvas.h  scene.h  scene_group.h  test_canvas.h  visible_group.h
3/scene/src/: scene.cpp  scene_group.cpp  test_canvas.cpp  visible_group.cpp
3/tests/: main_test.h  test_draw.h  test_load.h  test_managers.h  test_math.h  test_scene.h
3/visitor/inc/: base_visitor.h  draw_visitor.h
3/visitor/src/: draw_visitor.cpp
4/docs/: .$diagram.drawio.bkp  diagram.drawio
4/gui/includes/: design.h
4/implementation/cabin/: cabin.cpp  cabin.h
4/implementation/controller/: controller.cpp  controller.h
4/implementation/doors/: doors.h
4/implementation/elevator/: elevator.cpp
5/: fen.drawio  microwave.drawio  vacuum_cleaner.drawio
ihateqt/: CMakeLists.txt  parse_obj.py
ihateqt/inc/: domain.h  error.h  linalg.h  mainwindow.h  mishalib.h  obj3d.h  obj3d_util.h  scene_wrapper.h  state.h  transformable_object.h  transformations.h
ihateqt/src/: domain.cpp  linalg.cpp  line.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  obj3d.cpp  obj3d_util.cpp  scene_wrapper.cpp  transformable_object.cpp  transformations.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/inc/: abstract_iterator.h  abstract_set.h  abstract_set.hpp  concrete_set.h  errors.h  my_set.h  rbtree.h  rbtree.hpp  rbtree_iterator.h  rbtree_iterator.hpp  rbtree_node.h
lab2/inc/abstract/: abstract_set.h  abstract_set.hpp
lab2/inc/ordered_set/: ordered_set.h  ordered_set.hpp
lab2/inc/rbtree/: rbtree.h  rbtree.hpp  rbtree_iterator.h  rbtree_iterator.hpp  rbtree_node.h
lab2/inc/tests/: copy_move.h  creation.h  insertion.h  iterators.h  main.h  operations.h  removal.h  util.h
